@@ -4,13 +4,20 @@
     <AssemblyName>Mono.Rocks</AssemblyName>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
   </AssemblyInfo>
+  <ThreadingSafetyStatement>
+    This type is thread safe.
+  </ThreadingSafetyStatement>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
   </Base>
   <Interfaces />
   <Docs>
-    <summary>To be added.</summary>
-    <remarks>To be added.</remarks>
+    <summary>
+      Provides static utility methods to create
+      <see cref="T:Mono.Rocks.Either{TValue,Exception}" /> instances.
+    </summary>
+    <remarks>
+    </remarks>
   </Docs>
   <Members>
     <Member MemberName="TryParse&lt;T&gt;">
@@ -29,13 +36,43 @@
         <Parameter Name="value" Type="System.String" />
       </Parameters>
       <Docs>
-        <typeparam name="T">To be added.</typeparam>
-        <param name="value">To be added.</param>
-        <summary>To be added.</summary>
-        <returns>To be added.</returns>
-        <remarks>To be added.</remarks>
-        <exception cref="T:System.ArgumentNullException">To be added; from: <see cref="M:Mono.Rocks.Either.TryParse``2(``0)" />, <see cref="M:Mono.Rocks.Either`2.B(`1)" /></exception>
-        <exception cref="T:System.NotSupportedException">To be added; from: <see cref="M:Mono.Rocks.Either.TryParse``2(``0)" />, <see cref="M:Mono.Rocks.Either`2.B(`1)" /></exception>
+        <typeparam name="T">
+          The type to convert <paramref name="value" /> to.
+        </typeparam>
+        <param name="value">
+          A <see cref="T:System.String" /> containing the value to convert
+          into a <typeparamref name="T" />.
+        </param>
+        <summary>
+          Attempt to convert the value within a <see cref="T:System.String" />
+          into an instance of type <typeparamref name="T" />.
+        </summary>
+        <returns>
+          A <see cref="T:Mono.Rocks.Either{``0,System.Exception}" />
+          containing either the parsed value or the error that results from
+          attempting to convert <paramref name="value" /> into an instance
+          of type <typeparamref name="T" />.
+        </returns>
+        <remarks>
+          <code lang="C#" src="../../Tests/Mono.Rocks.Tests/EitherTest.cs#TryParse">var v = Either.TryParse&lt;int&gt; ("3.14159");
+var e = v.Fold (i =&gt; null, i =&gt; i);
+Assert.IsNotNull (e);
+Assert.IsTrue (typeof(Exception).IsAssignableFrom (e.GetType()));
+
+v = Either.TryParse&lt;int&gt; ("42");
+var n = v.Fold (i =&gt; i, i =&gt; -1);
+Assert.AreEqual (42, n);
+
+var v2 = Either.TryParse&lt;int?&gt; ("3.14159");
+e = v2.Fold (i =&gt; null, i =&gt; i);
+Assert.IsNotNull (e);
+Assert.IsTrue (typeof(Exception).IsAssignableFrom (e.GetType()));
+
+v2 = Either.TryParse&lt;int?&gt; ("42");
+n = v2.Fold (i =&gt; i.Value, i =&gt; -1);
+Assert.AreEqual (42, n);
+</code>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="TryParse&lt;TSource,TResult&gt;">
@@ -55,14 +92,42 @@
         <Parameter Name="value" Type="TSource" />
       </Parameters>
       <Docs>
-        <typeparam name="TSource">To be added.</typeparam>
-        <typeparam name="TResult">To be added.</typeparam>
-        <param name="value">To be added.</param>
-        <summary>To be added.</summary>
-        <returns>To be added.</returns>
-        <remarks>To be added.</remarks>
-        <exception cref="T:System.ArgumentNullException">To be added; from: <see cref="M:Mono.Rocks.Either`2.B(`1)" /></exception>
-        <exception cref="T:System.NotSupportedException">To be added; from: <see cref="M:Mono.Rocks.Either.TryParse``2(``0)" /></exception>
+        <typeparam name="TSource">
+          The type to convert from.
+        </typeparam>
+        <typeparam name="TResult">
+          The type to convert to.
+        </typeparam>
+        <param name="value">
+          An instance of type <typeparamref name="TSource" /> containing the
+          value to convert into a <typeparamref name="TResult" /> instance.
+        </param>
+        <summary>
+          Attempt to convert the value within a <typeparamref name="TSource" />
+          into an instance of type <typeparamref name="TResult" />.
+        </summary>
+        <returns>
+          A <see cref="T:Mono.Rocks.Either{``1,System.Exception}" />
+          containing either the parsed value or the error that results from
+          attempting to convert <paramref name="value" /> into an instance
+          of type <typeparamref name="TResult" />.
+        </returns>
+        <remarks>
+          <code lang="C#" src="../../Tests/Mono.Rocks.Tests/EitherTest.cs#TryParse2">Either&lt;DateTime, Exception&gt; a = Either.TryParse&lt;int, DateTime&gt; (42);
+e = a.Fold (i =&gt; null, i =&gt; i);
+Assert.IsNotNull (e);
+Assert.IsTrue (typeof (Exception).IsAssignableFrom (e.GetType()));
+
+Either&lt;string, Exception&gt; b = Either.TryParse&lt;int, string&gt; (42);
+var n2 = b.Fold (i =&gt; i, i =&gt; null);
+Assert.AreEqual ("42", n2);
+
+Either&lt;int, Exception&gt; c = 
+	Either.TryParse&lt;CustomConvertible, int&gt; (new CustomConvertible ());
+var n3 = c.Fold (i =&gt; i, i =&gt; -1);
+Assert.AreEqual (CustomConvertible.Int32, n3);
+</code>
+        </remarks>
       </Docs>
     </Member>
   </Members>
